--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -113,7 +113,7 @@ jhipster:
     social:
         redirect-after-sign-in: "/#/social-auth"
     ribbon:
-        display-on-active-profiles: dev
+        display-on-active-profiles:
 
 # ===================================================================
 # Application specific properties
